# AsmQC

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cookbook/: README.md  SOURCES.md  generate.py
cookbook/01_rock_ptarmigan_good/: NARRATION.md  make.sh
cookbook/01_rock_ptarmigan_good/inputs/: bLagMut1_telomeric_repeat_windows.tsv  gfastats_summary.txt  short_summary.specific.aves_odb10.txt
cookbook/01_rock_ptarmigan_good/inputs/merqury/: bLagMut1.completeness.stats  bLagMut1.qv
cookbook/01_rock_ptarmigan_good/report/: flags.bed  flags.gff3  report.html  report.md  summary.json
cookbook/02_philippine_tarsier_draft/: NARRATION.md  make.sh
cookbook/02_philippine_tarsier_draft/inputs/: gfastats_summary.txt  short_summary.specific.primates_odb10.txt
cookbook/02_philippine_tarsier_draft/report/: report.html  report.md  summary.json
docs/: architecture.md  formats.md  metrics.md
examples/: README.md  make_example.py
examples/synthetic/: example_thresholds.yaml
examples/synthetic/inputs/: asm_telomeric_repeat_windows.tsv  assembly.fasta  assembly.fcs_gx_report.txt  short_summary.txt
examples/synthetic/inputs/merqury/: asm.completeness.stats  asm.qv  asm.spectra-cn.hist
examples/synthetic/report/: flags.bed  flags.gff3  jbrowse2_config.json  report.html  report.md  summary.json
src/asmqc/: __init__.py  __main__.py  cli.py  config.py  core.py  explanations.py  fasta_stats.py  flags.py  models.py  plots.py  report.py
src/asmqc/data/: default_config.yaml
src/asmqc/exporters/: __init__.py  jbrowse.py  tracks.py
src/asmqc/parsers/: __init__.py  busco.py  common.py  contamination.py  gfastats.py  merqury.py  quast.py  tidk.py
tests/: conftest.py  test_cli_core.py  test_config.py  test_fasta_stats.py  test_flags.py  test_parsers.py  test_report_export.py
tests/fixtures/: busco_short_summary.json  busco_short_summary.txt  fcs_gx_report.txt  gfastats_summary.txt  kraken_report.txt  quast_report.tsv  tidk_windows.tsv  tiny.fasta
tests/fixtures/merqury/: asm.completeness.stats  asm.qv  asm.spectra-cn.hist
